# django-formulator

./: .coveragerc  .gitignore  .travis.yml  AUTHORS  LICENSE  MANIFEST.in  Makefile  README.rst  requirements.txt  runtests.py  setup.cfg  setup.py  tox.ini
formulator/: __init__.py  admin.py  apps.py  conf.py  factories.py  fields.py  managers.py  models.py  test_settings.py  utils.py
formulator/migrations/: 0001_initial.py  0002_auto_20151218_1616.py  0002_auto_20160108_1322.py  0002_field_choices.py  0003_auto_20150112_1834.py  0003_auto_20160223_1242.py  0004_auto_20150112_1848.py  0004_auto_20160309_1504.py  0005_auto_20150113_1131.py  0005_auto_20160527_1527.py  0006_auto_20150202_1340.py  0007_auto_20150219_1121.py
formulator/tests/: django_form.html  formulator_form.html  manage.py  tests.py
tests/: conftest.py  forms.py  requirements.txt  settings.py  test_formulators.py  test_models.py  urls.py
tests/formulator_tests/: tests.py
