[pytest]
django_find_project = false
addopts = --cov formulator
DJANGO_SETTINGS_MODULE = tests.settings

[wheel]
universal = 1

[flake8]
ignore = E124,E501,E127,E128
exclude = build,dist,.git,./docs/source/conf.py,./dynamic_forms/migrations/*.py
max-line-length = 119

[isort]
combine_as_imports = true
default_section = THIRDPARTY
forced_separate = formulator
include_trailing_comma = true
known_first_party = formulator
known_third_party = django
multi_line_output = 5

[metadata]
license-file = LICENSE
